fix: eps to pdf outputdir

--- a/Presentation/beamerstatale.tex
+++ b/Presentation/beamerstatale.tex
@@ -1,7 +1,7 @@
 \documentclass{beamer}
 \usepackage{amsfonts,amsmath,oldgerm,graphicx,epstopdf}
 \usepackage{booktabs}
-\epstopdfsetup{outdir=illustration}
+\epstopdfsetup{outdir=illustration/}
 \setbeamertemplate{caption}{\color{maincolor}Fig. \color{darkgray} \raggedright\insertcaption\par}
 
 \usetheme{sintef}
