feat: add todo package

--- a/Preamble.sty
+++ b/Preamble.sty
@@ -28,6 +28,9 @@
 \usepackage{chemfig}
 \usepackage{chemmacros}
 \usepackage{tocloft}
+\usepackage{todonotes}
+% \usepackage{epstopdf}
+% \epstopdfsetup{outdir=Structures/}
 %\chemsetup[chemformula]{format=\sffamily}
 \renewcommand*\printatom[1]{\ensuremath{\mathsf{#1}}}
 % \setatomsep{2em}
