--- a/Preamble.sty
+++ b/Preamble.sty
@@ -31,6 +31,7 @@
 \usepackage{todonotes}
 \usepackage{listings}
 \usepackage{xcolor}
+\usepackage[withpage]{acronym}
 
 \lstdefinestyle{mystyle}{
 	language=Python,
@@ -74,3 +75,4 @@
 {\normalfont\normalsize\bfseries}{\theparagraph}{1em}{}
 \titlespacing*{\paragraph}
 {0pt}{3.25ex plus 1ex minus .2ex}{1.5ex plus .2ex}
+
