chore: todo addition

--- a/Presentation/beamerstatale.tex
+++ b/Presentation/beamerstatale.tex
@@ -14,6 +14,8 @@
 
 \newcommand{\hrefcol}[2]{\textcolor{cyan}{\href{#1}{#2}}}
 
+% TODO: aggiornare titolo, aggiungere corelatore.
+
 \title{\large{Utilizzo di un legante contenente una funzionalità pirazolica e due gruppi carbossilici per la costruzione di nuovi MOFs per applicazioni nell’ambito del gas storage}}
 \course{Relatrice: Prof. Lucia Carlucci}
 \subtitle{Laurea Triennale in Chimica}
