chore: new title

--- a/Presentation/beamerstatale.tex
+++ b/Presentation/beamerstatale.tex
@@ -16,8 +16,8 @@
 
 % TODO: aggiornare titolo, aggiungere corelatore.
 
-\title{\large{Utilizzo di un legante contenente una funzionalità pirazolica e due gruppi carbossilici per la costruzione di nuovi MOFs per applicazioni nell’ambito del gas storage}}
-\course{Relatrice: Prof. Lucia Carlucci}
+\title{\large{Investigation of the synthesis of a new pyrazole dicarboxylate ligand for the construction of new MOFs}}
+\course{\vspace{0.2cm}\tiny Relatrice: Prof. Lucia Carlucci \\ \vspace{-0.2cm} Co-relatore: Pierluigi Mercandelli}
 \subtitle{Laurea Triennale in Chimica}
 \author{\href{stefano.marton@studenti.unimi.it}{Stefano Marton}}
 \IDnumber{962848}
