chore: update bib

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -488,3 +488,53 @@ Publisher: Molecular Diversity Preservation International},
 	langid = {english},
 	file = {hoz_et_al_2021_the_mechanism_of_the_reaction_of_hydrazines_with_α,β-unsaturated_carbonyl.pdf:/home/stefanom/GoogleDrive/Università/Zot/Tetrahedron/2021/hoz_et_al_2021_the_mechanism_of_the_reaction_of_hydrazines_with_α,β-unsaturated_carbonyl.pdf:application/pdf;The mechanism of the reaction of hydrazines with α,β-unsaturated carbonyl compounds to afford hydrazones and 2-pyrazolines (4,5-dihydro-1H-pyrazoles)\: Experimental and theoretical results:/home/stefanom/GoogleDrive/University/Zotero/Zotero/storage/AXHUDPSG/S0040402021006724.pdf.pdf:application/pdf},
 }
+
+@article{blasi_supramolecular_2022,
+	title = {Supramolecular Frameworks and a Luminescent Coordination Polymer from New β-Diketone/Tetrazole Ligands},
+	volume = {10},
+	issn = {2304-6740},
+	url = {https://www.mdpi.com/2304-6740/10/4/55},
+	doi = {10.3390/inorganics10040055},
+	abstract = {Mixed multidentate linkers with donor groups of different types can be fruitfully exploited in the self-assembly of coordination polymers ({CPs}) and Metal-Organic Frameworks ({MOFs}). In this work we develop new ligands containing a β-diketone chelating functionality, to better control the stereochemistry at the metal center, and tetrazolyl multidentate bridging groups, a combination not yet explored for networking with metal ions. The new ligands, 1,3-bis(4-(1H-tetrazol-5-yl)phenyl)-1,3-propanedione (H3L1) and 1-phenyl-3-(4-(1H-tetrazol-5-yl)phenyl)-1,3-propanedione (H2L2), are synthesized from the corresponding nitrile precursors by [2+3] dipolar cycloaddition of azide under metal-free catalytic conditions. Crystal structure analysis evidences the involvement of tetrazolyl fragments in multiple hydrogen bonding giving 2D and 1D supramolecular frameworks. Reactivity of the new ligands with different metal salts indicates good coordinating ability, and we report the preparation and structural characterization of the tris–chelate complex [Fe({HL}1)3]3− (1) and the homometallic 2D {CP} [{ZnL}2({DMSO})] (2). In compound 1 only the diketonate donor is used, whereas the partially deprotonated tetrazolyl groups are involved in hydrogen bonding, giving rise to a 2D supramolecular framework of (6,3){IIa} topological type. In compound 2 the ligand is completely deprotonated and uses both the diketonate donor (chelating) and the tetrazolate fragment (bridging) to coordinate the Zn({II}) ions. The resulting neutral 2D network of sql topology shows luminescence in the solid state, which is red shifted with respect to the free ligand. Interestingly, it can be easily exfoliated in water to give a luminescent colloidal solution.},
+	pages = {55},
+	number = {4},
+	journaltitle = {Inorganics},
+	shortjournal = {Inorganics},
+	author = {Blasi, Delia and Mercandelli, Pierluigi and Carlucci, Lucia},
+	urldate = {2023-09-18},
+	date = {2022-04-18},
+	langid = {english},
+	file = {Blasi et al_2022_Supramolecular Frameworks and a Luminescent Coordination Polymer from New.pdf:/home/stefanom/GoogleDrive/University/Zotero/Zotero/storage/7I4XDFPH/Blasi et al_2022_Supramolecular Frameworks and a Luminescent Coordination Polymer from New.pdf:application/pdf},
+}
+
+@inproceedings{li_discussion_2023,
+	location = {Guangzhou, China},
+	title = {Discussion on programming language teaching of information major based on Python language},
+	isbn = {978-1-5106-6130-1 978-1-5106-6131-8},
+	url = {https://www.spiedigitallibrary.org/conference-proceedings-of-spie/12509/2656038/Discussion-on-programming-language-teaching-of-information-major-based-on/10.1117/12.2656038.full},
+	doi = {10.1117/12.2656038},
+	eventtitle = {Third International Conference on Intelligent Computing and Human-Computer Interaction ({ICHCI} 2022)},
+	pages = {104},
+	booktitle = {Third International Conference on Intelligent Computing and Human-Computer Interaction ({ICHCI} 2022)},
+	publisher = {{SPIE}},
+	author = {Li, Lu and Xue, Xiangui and Yang, Xia},
+	editor = {Subramanian, Kannimuthu},
+	urldate = {2023-09-19},
+	date = {2023-01-13},
+}
+
+@article{hunter_matplotlib_2007,
+	title = {Matplotlib: A 2D Graphics Environment},
+	volume = {9},
+	issn = {1521-9615},
+	url = {http://ieeexplore.ieee.org/document/4160265/},
+	doi = {10.1109/MCSE.2007.55},
+	shorttitle = {Matplotlib},
+	pages = {90--95},
+	number = {3},
+	journaltitle = {Computing in Science \& Engineering},
+	shortjournal = {Comput. Sci. Eng.},
+	author = {Hunter, John D.},
+	urldate = {2023-09-19},
+	date = {2007},
+}
